fix map white space

--- a/src/Components/AboutSegment/styles.css
+++ b/src/Components/AboutSegment/styles.css
@@ -13,7 +13,7 @@
 }
 
 .AboutDescriptionContainer {
-	background-color: #FFCFA1;
+	background-color: #ffe2c6;
 	width: 70%;
 	height: 100%;
 	float:right;
